# preconf-contracts

./: .gitignore  .gitmodules  README.md  foundry.toml  package-lock.json
eigen_offchain/: Cargo.toml
eigen_offchain/src/: abi.rs  abii.json  lib.rs  main.rs
offchain/: docker-compose.yaml
offchain/abi/: TxnVerifier.json
offchain/aggregator/: Cargo.toml  Dockerfile
offchain/aggregator/src/: .env.xx  aggregator.rs  contract.rs  lib.rs  main.rs  task.rs
offchain/operator/: Cargo.toml  Dockerfile
offchain/operator/src/: .env.xxx  contract.rs  lib.rs  main.rs  operator.rs  register.rs
offchain/symbio/: Cargo.toml
offchain/symbio/src/: abii.json  main.rs
onchain/: foundry.toml  package-lock.json
onchain/script/: Deploy.sol  KarakDeploy.sol
onchain/src/: Parameters.sol  Slashing.sol  SymbioticRestaking.sol  Validator.sol
onchain/src/EigenlayerRestaking/: EIgenlayerRestaking.sol
onchain/src/SymbioticRestaking/: SymbioticRestaking.sol
onchain/src/interfaces/: IRestaking.sol  ISlashing.sol  IValidators.sol
onchain/test/: TEST_Slashing.txt  TEST_Validator.txt
src/: Parameters.sol  SymbioticRestaking.sol  TxnVerifier.sol  Validator.sol
src/Restaking/: Restaking.sol
src/interfaces/: IParameters.sol
symbio/src/: abi.rs  abii.json  event_fetcher.rs  lib.rs  main.rs
symbiotic_offchain/: Cargo.toml
symbiotic_offchain/src/: main.rs
test/: TEST_Middleware.txt  TEST_Registry.txt  ValidatorRegistry.t.txt
