[package]
name = "symbiotic_offchain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
tokio = { version = "1.28", features = ["full"] }
ethers = { version = "2.0", features = ["rustls", "ws"] }
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive", "env"] }
dotenv = "0.15"
async-trait = "0.1"
hex = "0.4"